--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -94,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "\n",
@@ -105,17 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins 95EaMqRb\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the keys\n",
     "\n",
     "import os\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "mistralai_api_key = os.getenv('MISTRAL_API_KEY')\n",
     "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "if mistralai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {mistralai_api_key[:8]}\")\n",
     "else:\n",
     "    print(\"OpenAI API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
     "    \n"
@@ -123,19 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# And now - the all important import statement\n",
     "# If you get an import error - head over to troubleshooting guide\n",
     "\n",
-    "from openai import OpenAI"
+    "#from openai import OpenAI\n",
+    "from mistralai import Mistral"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,12 +163,13 @@
     "# If you're not sure what it means to create an instance of a class - head over to the guides folder!\n",
     "# If you get a NameError - head over to the guides folder to learn about NameErrors\n",
     "\n",
-    "openai = OpenAI()"
+    "#openai = OpenAI()\n",
+    "mistral = Mistral(api_key=mistralai_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,15 +180,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of 2 + 2 is 4. Here it is:\n",
+      "\n",
+      "2\n",
+      "+2\n",
+      "____\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-nano\",\n",
+    "#response = openai.chat.completions.create(\n",
+    "#    model=\"gpt-4.1-nano\",\n",
+    "#    messages=messages\n",
+    "#)\n",
+    "model = \"mistral-large-latest\"\n",
+    "\n",
+    "response = mistral.chat.complete(\n",
+    "    model=model,\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -176,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,14 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If a snail is at the bottom of a 20-foot well, and it climbs up 5 feet each day, but slides back 4 feet each night, how many days does it take for the snail to reach the top of the well?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
+    "response = mistral.chat.complete(\n",
+    "    model=model,\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -206,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +264,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's break down the snail's progress:\n",
+      "\n",
+      "- Each day, the snail climbs up 5 feet.\n",
+      "- Each night, the snail slides back 4 feet.\n",
+      "- So, the net progress each day is 1 foot (5 feet up - 4 feet back).\n",
+      "\n",
+      "However, on the last day of climbing, the snail will reach the top without sliding back, because it will have climbed out of the well.\n",
+      "\n",
+      "Here's the step-by-step process:\n",
+      "\n",
+      "1. The snail needs to climb 20 feet in total.\n",
+      "2. For the first 15 feet, the snail will make a net progress of 1 foot per day.\n",
+      "3. This means it will take 15 days for the snail to reach a point where it is 15 feet up the well.\n",
+      "4. On the 16th day, the snail climbs up 5 feet, reaching 20 feet (the top of the well), and it will escape the well without sliding back.\n",
+      "\n",
+      "Therefore, it takes the snail 16 days to reach the top of the well.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
+    "response = mistral.chat.complete(\n",
+    "    model=model,\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -233,14 +304,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's break down the snail's progress:\n",
+       "\n",
+       "- Each day, the snail climbs up 5 feet.\n",
+       "- Each night, the snail slides back 4 feet.\n",
+       "- So, the net progress each day is 1 foot (5 feet up - 4 feet back).\n",
+       "\n",
+       "However, on the last day of climbing, the snail will reach the top without sliding back, because it will have climbed out of the well.\n",
+       "\n",
+       "Here's the step-by-step process:\n",
+       "\n",
+       "1. The snail needs to climb 20 feet in total.\n",
+       "2. For the first 15 feet, the snail will make a net progress of 1 foot per day.\n",
+       "3. This means it will take 15 days for the snail to reach a point where it is 15 feet up the well.\n",
+       "4. On the 16th day, the snail climbs up 5 feet, reaching 20 feet (the top of the well), and it will escape the well without sliding back.\n",
+       "\n",
+       "Therefore, it takes the snail 16 days to reach the top of the well."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
-    "display(Markdown(answer))\n",
-    "\n"
+    "display(Markdown(answer))\n"
    ]
   },
   {
@@ -287,7 +385,7 @@
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = \n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
@@ -318,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
